--- a/style.css
+++ b/style.css
@@ -1,32 +1,34 @@
 body {
     font-family:'Times New Roman', Times, serif;
-    margin: 0;
 }
 
 ul {
     list-style-type: none;
-    padding: 0;
+    display: flex;
+    gap: 8px;
+    padding: 8px;
     margin: 0;
 }
 
 a {
     text-decoration: none;
-    color: gray;
-    font-size: 24px
+    color: rgb(194, 194, 194);
+    font-size: 24px;
+    padding: 8px
 }
 
-li {
-    margin-bottom: 16px;
-}
 
 .header-logo {
     height: 72px;
-    background: blue;
     color: white;
     font-size: 32px;
     padding: 0 16px;
+    font-weight: bold;
 }
 
 .header {
-
+    display: flex;
+    justify-content: space-between;
+    padding: 16px;
+    background-color: #1f2937;
 }
